<resources>
    <string name="app_name">PPEx-Android</string>
    <string name="get_nattype">GetNatType</string>
    <string name="send_info">SendInfo</string>
    <string name="get_allpeers">GetAllPeers</string>
    <string name="macaddress">MacAdress</string>
    <string name="peername">PeerName</string>
    <string name="netsocketaddress">NetSocketAddress</string>
    <string name="nattype">NatType</string>
    <string name="localparam">LocalParam:</string>
    <string name="localip">LocalIP</string>
    <string name="localmac">LocalMacAddress</string>

    <string name="back">back</string>

    <string name="getfile">GetFile</string>
    <string name="getfiles">GetFiles</string>
</resources>
