<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ppex.androidcomponent.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localparam"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peername"></TextView>

                <TextView
                    android:id="@+id/tv_main_showlocalpeername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/peername"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/localip"></TextView>

                <TextView
                    android:id="@+id/tv_main_showlocalip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/peername"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/localmac"></TextView>

                <TextView
                    android:id="@+id/tv_main_showlocalmac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/peername"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_getnattype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_nattype"></Button>

        <TextView
            android:id="@+id/tv_main_shownattypeinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_nattype"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_getallpeers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_allpeers"></Button>

        <TextView
            android:id="@+id/tv_main_showconnectinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <Button
            android:id="@+id/btn_main_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_main_showrcvcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_main_showallpeers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>


</LinearLayout>